vlib/v/checker/tests/blank_modify.out
vlib/v/checker/tests/blank_modify.vv:2:2: error: cannot modify blank `_` identifier
    1 | fn main() {
    2 |     _ += 1
      |     ^
    3 | }
