vlib/v/checker/tests/blank_modify.vv
fn main() {
	_ += 1
}
